Fixed table alignment.

--- a/LiquiZ2/WebContent/assets/css/demostyle.css
+++ b/LiquiZ2/WebContent/assets/css/demostyle.css
@@ -100,6 +100,12 @@ h2 {
     display: inline-block;
 }
 
+.grid input {
+    border-width: 1px;
+    padding: 2px;
+    width: 50px;
+}
+
 .grid.answer {
     background-color: transparent;
 }
